--- a/style.css
+++ b/style.css
@@ -18,26 +18,50 @@ p{
 }
 
 .box-1{
-    float: right;
-    width: 20vh;
-    height: 20vh;
-    border-radius: 0;
+    
+    width: 50px;;
+    height: 100px;
+    border-radius: 10px;
     background: aqua;
-    margin: 1rem;
+    margin: 0.7rem;
 }
 .box-2{
     
     width: 50px;
-    height: 50px;
-    border-radius: 0;
+    height: 100px;
+    border-radius: 10px;
     background: red;
-    margin: 1rem;
+    margin: 0.7rem;
 }
 .box-3{
-    float: left;
+    
     width: 50px;
-    height: 50px;
-    border-radius: 0;
+    height: 100px;
+    border-radius: 10px;
     background: blueviolet;
-    margin: 1rem;
+    margin: 0.7rem;
+}
+.box-4{
+    
+    width: 50px;
+    height: 100px;
+    border-radius: 10px;
+    background: teal;
+    margin: 0.7rem;
+}
+.box-5{
+    
+    width: 50px;
+    height: 100px;
+    border-radius: 10px;
+    background: indianred;
+    margin: 0.7rem;
+}
+.box-6{
+    
+    width: 50px;
+    height: 100px;
+    border-radius: 10px;
+    background: palegreen;
+    margin: 0.7rem;
 }
