--- a/style.css
+++ b/style.css
@@ -16,52 +16,22 @@ p{
     font-weight: 600;
 
 }
+.container{
+    width: 69%;
+    
+}
+.container{
+    width: 60%;
+}
+.square{
+    background: rgb( 0, 0, 0);
+    padding: 84px;
+    margin: 10px 10px 10px 10px;
+    float: left;
+    border-radius: 20px;
+}
+.container{
+    width: 50%;
+    margin: 0 auto;
 
-.box-1{
-    
-    width: 50px;;
-    height: 100px;
-    border-radius: 10px;
-    background: aqua;
-    margin: 0.7rem;
-}
-.box-2{
-    
-    width: 50px;
-    height: 100px;
-    border-radius: 10px;
-    background: red;
-    margin: 0.7rem;
-}
-.box-3{
-    
-    width: 50px;
-    height: 100px;
-    border-radius: 10px;
-    background: blueviolet;
-    margin: 0.7rem;
-}
-.box-4{
-    
-    width: 50px;
-    height: 100px;
-    border-radius: 10px;
-    background: teal;
-    margin: 0.7rem;
-}
-.box-5{
-    
-    width: 50px;
-    height: 100px;
-    border-radius: 10px;
-    background: indianred;
-    margin: 0.7rem;
-}
-.box-6{
-    
-    width: 50px;
-    height: 100px;
-    border-radius: 10px;
-    background: palegreen;
-    margin: 0.7rem;
 }
