--- a/style.css
+++ b/style.css
@@ -17,10 +17,6 @@ p{
 
 }
 .container{
-    width: 69%;
-    
-}
-.container{
     width: 60%;
 }
 .square{
@@ -35,3 +31,18 @@ p{
     margin: 0 auto;
 
 }
+/* .container{
+    width: 60%;
+}
+.square{
+    background: rgb( 0, 0, 0);
+    padding: 84px;
+    margin: 10px 10px 10px 10px;
+    float: left;
+    border-radius: 20px;
+}
+.container{
+    width: 50%;
+    margin: 0 auto;
+
+} */
